--- a/_posts/2013-8-11-Hello_World.html
+++ b/_posts/2013-8-11-Hello_World.html
@@ -1,7 +1,7 @@
----
+ï»¿---
 layout: default
-title: Hello£¬World
+title: Helloï¼ŒWorld
 ---
 <h2>{{ page.title }}</h2>
-<p>ÎÒµÄµÚÒ»ÆªÎÄÕÂ</p>
+<p>æˆ‘çš„ç¬¬ä¸€ç¯‡æ–‡ç« </p>
 <p>{{ page.date | date_to_string }}</p>
