csdn.com is unable ,change to csdn.net

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<html>
 <head>
-<meta http-equiv="refresh" content="0;url=http://blog.csdn.com/lfj200411"> 
+<meta http-equiv="refresh" content="0;url=http://blog.csdn.net/lfj200411"> 
 </head>
 </html>
